# codex-loop-skill

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/simple-local-project/: README.md  codex-loop.yaml
examples/simple-local-project/plan/: 001-implementation-plan.md
examples/simple-local-project/spec/: 001-project-spec.md
examples/simple-local-project/tasks/: 001-foundation.md  002-supervisor.md
skills/codex-loop/: SKILL.md
skills/codex-loop/agents/: openai.yaml
skills/codex-loop/references/: config.md  safety.md  workflow.md
src/codex_loop/: __init__.py  cleanup.py  cli.py  codex_runner.py  config.py  daemon_manager.py  doctor.py  git_ops.py  hooks.py  init_flow.py  metrics.py  reporting.py  run_flow.py  run_lock.py  service_manager.py  state_store.py  supervisor.py  task_graph.py  verifier.py  watchdog_manager.py
tests/: test_cleanup.py  test_cli.py  test_codex_runner.py  test_config.py  test_daemon_manager.py  test_doctor.py  test_git_ops.py  test_hooks.py  test_init_flow.py  test_reporting.py  test_run_flow.py  test_run_lock.py  test_service_manager.py  test_state_store.py  test_supervisor.py  test_task_graph.py  test_verifier.py  test_watchdog_manager.py
