[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-loop"
version = "0.1.0"
description = "Autonomous Codex loop for local file-driven implementation workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ly" }
]
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "https://github.com/ly87ing/codex-loop-skill"
Issues = "https://github.com/ly87ing/codex-loop-skill/issues"

[project.scripts]
codex-loop = "codex_loop.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

